fix: Java 8兼容性修复 - 将List.of改为Arrays.asList
Java 8不支持List.of()方法（Java 9+特性），导致编译失败。
修改LookupServiceImpl.java，使用Arrays.asList()替代。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>